tests/error/0042.exl
({ x }: x)1
          ^ERROR